[workspace]
members = [
    "puroro",
    "codegen",
    "inline",
    "update-puroro-doc-samples",
    "update-puroro-protobuf",
    "tests",
    "tests-pb",
]
default-members = [
    "puroro",
    "codegen",
    "inline",
#    "update-puroro-doc-samples",
#    "update-puroro-protobuf",
    "tests",
    "tests-pb",
]
