[package]
name = "puroro-codegen"
version = "0.7.0"
authors = ["Shohei Wada <pc@wada314.jp>"]
edition = "2021"
license = "Apache-2.0"
description = "Google Protocol Buffer's compiler plugin implementation for puroro"
repository = "https://github.com/wada314/puroro"
documentation = "https://docs.rs/puroro/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
puroro = { path = "../puroro", version = "0.7.0" }
puroro-protobuf-compiled = "0.7.0"
itertools = "0.10"
lazy_static = "1.4"
thiserror = "1.0"
once_cell = "1.15"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
prettyplease = "0.1.21"
protoc-bin-vendored = "3.0.0"
 
[features]
default = []

