[package]
name = "puroro-codegen"
version = "0.14.2"
authors = ["Shohei Wada <pc@wada314.jp>"]
edition = "2021"
license = "Apache-2.0"
description = "Google Protocol Buffer's compiler plugin implementation for puroro"
repository = "https://github.com/wada314/puroro"
documentation = "https://docs.rs/puroro/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stable_puroro = { package = "puroro", version = "0.14.0" }
itertools = "0.14"
lazy_static = "1.5"
thiserror = "2.0"
once_cell = "1.20"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
prettyplease = "0.2.27"
protoc-bin-vendored = "3.1.0"

[features]
default = []

[lib]

[[bin]]
name = "puroro-plugin"
path = "src/main.rs"
