[package]
name = "puroro-inline"
version = "0.14.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
puroro-codegen = { path = "../codegen" }
litrs = "0.3.0"
quote = "1.0"
proc-macro2 = "1.0"
tempdir = "0.3"
protoc-bin-vendored = "3.0.0"

[features]
default = []
