[package]
name = "puroro-inline"
version = "0.14.1"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
puroro-codegen = { path = "../codegen" }
litrs = "0.3.0"
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
tempdir = "0.3"
protoc-bin-vendored = "3.0.0"

[features]
default = []
