[package]
name = "plugin"
version = "0.1.0"
authors = ["Shohei Wada <pc@wada314.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
puroro = { path = "../puroro" }
num-derive = "0.3.3"
num-traits = "0.2.14"
itertools = "0.10.0"
lazy_static = "1.4.0"
thiserror = "1.0.24"
once_cell = "1.7.2"

[features]
nightly = []
stage1 = []
stage2 = []
stage3 = []
default = ["nightly", "stage2"]