[package]
name = "puroro-plugin"
version = "0.9.1"
edition = "2021"
license = "Apache-2.0"
description = "Google Protocol Buffer's compiler plugin implementation for puroro"
repository = "https://github.com/wada314/puroro"
documentation = "https://docs.rs/puroro/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
puroro-codegen = { path = "../codegen", version = "0.9.1" }
