[package]
name = "puroro-plugin"
version = "0.11.0"
edition = "2021"
license = "Apache-2.0"
description = "Deprecated, integrated into puroro-codegen. Google Protocol Buffer's compiler plugin implementation for puroro"
repository = "https://github.com/wada314/puroro"
documentation = "https://docs.rs/puroro/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
puroro-codegen = { version = "0.10.0" }
