[package]
name = "protobuf-compiled"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
puroro = { git = "ssh://git@github.com/wada314/puroro", rev = "49c4f6bd8f246fac2423aaffb76af5c78ca58ffa" }
puroro-internal = { git = "ssh://git@github.com/wada314/puroro", rev = "49c4f6bd8f246fac2423aaffb76af5c78ca58ffa" }

[lib]
