[package]
name = "puroro-deserializer"
version = "0.1.0"
authors = ["Shohei Wada <pc@wada314.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.24"
num-traits = "0.2.14"
num-derive = "0.3.3"
utf8-decode = "1.0.1"