[package]
name = "puroro-internal"
version = "0.1.0"
authors = ["Shohei Wada <pc@wada314.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
puroro = { path = "../puroro" }
bumpalo = { version = "3.6.1", features = ["collections", "boxed"], optional = true }
num-traits = "0.2.14"
num-derive = "0.3.3"
utf8-decode = "1.0.1"

[features]
puroro-nightly = []
puroro-bumpalo = ["bumpalo"]
default = ["puroro-nightly", "puroro-bumpalo"]
