[package]
name = "puroro-internal"
version = "0.1.0"
authors = ["Shohei Wada <pc@wada314.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
puroro = { path = "../puroro" }
# Requires this commit to be included:
# https://github.com/fitzgen/bumpalo/commit/e9adce57a54fff2a12994ec8a5797ea041083c1c
bumpalo = { git = "https://github.com/fitzgen/bumpalo.git", features = ["collections", "boxed"], optional = true }
num-traits = "0.2.14"
num-derive = "0.3.3"
utf8-decode = "1.0.1"
# Requires this commit to be included:
# https://github.com/rust-itertools/itertools/commit/125502571abfe49b619bc9ce0adde47414a1a601
itertools = { git = "https://github.com/rust-itertools/itertools" }
either_n = "0.2.0"

[features]
puroro-nightly = []
puroro-bumpalo = ["bumpalo"]
default = ["puroro-nightly", "puroro-bumpalo"]
