[package]
name = "puroro-plugin"
version = "0.3.1"
authors = ["Shohei Wada <pc@wada314.jp>"]
edition = "2018"
license = "Apache-2.0"
description = "Google Protocol Buffer's compiler plugin implementation for puroro"
repository = "https://github.com/wada314/puroro"
documentation = "https://docs.rs/puroro/0.1.0/puroro/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
puroro = { path = "../puroro", version = "0.3.1" }
puroro-protobuf-compiled = { path = "../puroro-protobuf-compiled", version = "0.3.1" }
askama = "0.10"
itertools = "0.10.1"
lazy_static = "1.4.0"
thiserror = "1.0.25"
once_cell = "1.8.0"

[features]
default = []
