[package]
name = "puroro-plugin"
version = "0.5.2"
authors = ["Shohei Wada <pc@wada314.jp>"]
edition = "2021"
license = "Apache-2.0"
description = "Google Protocol Buffer's compiler plugin implementation for puroro"
repository = "https://github.com/wada314/puroro"
documentation = "https://docs.rs/puroro/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
puroro = { path = "../puroro", version = "0.5.1" }
puroro-protobuf-compiled = "0.5.1"
# Use the same version as the puroro-protobuf-compiled
puroro_old = { package = "puroro", version = "0.5.1" }
askama = "0.11"
itertools = "0.10"
lazy_static = "1.4"
thiserror = "1.0"
once_cell = "1.15"
 
[features]
default = []

