[package]
name = "puroro-protobuf-compiled"
version = "0.2.1"
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/wada314/puroro"
description = "A compiled Google Protocol Buffer's interface proto. Normal user don't need to use this crate directly."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
puroro = "0.2.1"
# puroro = { path = "../puroro" }

[lib]
