[package]
name = "puroro-unknown"
version = "0.1.0"
authors = ["Shohei Wada <pc@wada314.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
puroro = { path = "../puroro" }
puroro-deserializer = { path = "../puroro-deserializer" }
itertools = "0.10.0"