[package]
name = "puroro"
version = "0.14.0"
authors = ["Shohei Wada <pc@wada314.jp>"]
edition = "2021"
license = "Apache-2.0"
description = "A Rust implementation of Google Protocol Buffer."
repository = "https://github.com/wada314/puroro"
readme = "../readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[[bench]]
name = "variant"
harness = false

[dependencies]
once-list2 = { version = "0.3.0" }
cached-pair = "0.1.0"
derive_more = { version = "1.0.0", features = ["full"] }
futures = "0.3.30"
hashbrown = { version = "0.14.5", features = [] }
itertools = "0.12.1"
once_cell = "1.19.0"
ref-cast = "1.0.23"
replace_with = "0.1.7"
thiserror = "1.0"

[dev-dependencies]
rand = "0.8.3"
rand_pcg = "0.3.1"
rand_distr = "0.4.3"
criterion = { version = "0.5.1", features = ["html_reports"] }

[features]
default = []
