[package]
name = "puroro"
version = "0.14.0"
authors = ["Shohei Wada <pc@wada314.jp>"]
edition = "2021"
license = "Apache-2.0"
description = "A Rust implementation of Google Protocol Buffer."
repository = "https://github.com/wada314/puroro"
readme = "../readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[[bench]]
name = "variant"
harness = false

[dependencies]
once-list2 = { version = "0.3.1", features = ["nightly"] }
cached-pair = "0.6.0"
derive_more = { version = "1.0.0", features = ["full"] }
futures = "0.3.31"
hashbrown = { version = "0.15.2", features = ["nightly"] }
itertools = "0.14.0"
once_cell = "1.20.2"
ref-cast = "1.0.23"
replace_with = "0.1.7"
thiserror = "2.0"

[dev-dependencies]
rand = "0.8.5"
rand_pcg = "0.3.1"
rand_distr = "0.4.3"
criterion = { version = "0.5.1", features = ["html_reports"] }

[features]
default = []
