[package]
name = "sample-pb"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
puroro = { path = "../puroro" }
puroro-internal = { path = "../puroro-internal" }
bumpalo = { version = "3.7.0", features = ["collections", "boxed"], optional = true }

[build-dependencies]
puroro-plugin = { path = "../puroro-plugin" }

[features]
puroro-nightly = []
puroro-bumpalo = ["bumpalo"]
default = [
    "puroro-nightly", 
    "puroro-bumpalo",
]