[package]
name = "test_generated"
version = "0.1.0"
authors = ["Shohei Wada <pc@wada314.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
puroro = { path = "../puroro" }
puroro-internal = { path = "../puroro-internal" }
bumpalo = { version = "3.6.1", features = ["collections", "boxed"], optional = true }

[features]
puroro-nightly = []
puroro-bumpalo = ["bumpalo"]
default = [
    "puroro-nightly", 
    "puroro-bumpalo",
]