[package]
name = "tests-pb"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
puroro = { path = "../puroro" }

[build-dependencies]
puroro-plugin = { path = "../puroro-plugin" }

[features]
default = []