[package]
name = "tests-pb"
version = "0.10.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
puroro = { path = "../puroro" }

[build-dependencies]
puroro-codegen = { path = "../codegen" }
protoc-bin-vendored = "3.0.0"

[features]
default = []
dev-for-protobuf-use-stable-puroro = ["puroro/dev-for-protobuf-use-stable-puroro", "puroro-codegen/dev-for-protobuf-use-stable-puroro"]