[package]
name = "tests"
version = "0.13.0"
authors = ["Shohei Wada <pc@wada314.jp>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
puroro = { path = "../puroro", features = ["bumpalo"] }
itertools = "0.10"

[dev-dependencies]
puroro-inline = { path = "../inline" }

[build-dependencies]
puroro-codegen = { path = "../codegen" }
protoc-bin-vendored = "3.0.0"

[features]
default = []
