[package]
name = "tests"
version = "0.14.1"
authors = ["Shohei Wada <pc@wada314.jp>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
puroro = { path = "../puroro" }
itertools = "0.14"

[dev-dependencies]
puroro-inline = { path = "../inline" }

[build-dependencies]
puroro-codegen = { path = "../codegen" }
protoc-bin-vendored = "3.1.0"

[features]
default = []
