[package]
name = "update-puroro-doc-samples"
version = "0.12.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protoc-bin-vendored = "3.0.0"
puroro-codegen = { path = "../codegen", features = ["dev-for-protobuf-use-stable-puroro"] }
