[package]
name = "update-puroro-protobuf"
version = "0.11.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protoc-bin-vendored = "3.0.0"
puroro-codegen = { path = "../codegen" }

[features]
dev-for-protobuf-use-stable-puroro = ["puroro-codegen/dev-for-protobuf-use-stable-puroro"]
